Add business logic to add/get tasks

--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "body-parser": "1.15.1",
     "express": "4.13.4",
     "jade": "1.11.0",
-    "mongoose": "4.5.0"
+    "mongoose": "4.5.0",
+    "nodemon": "1.9.2"
   },
 
   "scripts": {
     "mongo-start": "mkdir mongo-db; mongod --dbpath mongo-db --port 27017",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
 
   "author": "Justin Bull",
