--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "4.13.4",
     "jade": "1.11.0",
     "mongoose": "4.5.0",
-    "nodemon": "1.9.2"
+    "nodemon": "1.9.2",
+    "socket.io": "1.4.6"
   },
 
   "scripts": {
