--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
 
   "scripts": {
-    "mongo-start": "mkdir mongo-db; mongod --dbpath mongo-db --port 27017",
+    "mongo-start": "mkdir -p mongo-db; mongod --dbpath mongo-db",
     "start": "nodemon index.js"
   },
 
