--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
 
   "dependencies": {
     "body-parser": "1.15.1",
-    "express": "4.13.4",
+    "express": "4.14.0",
     "jade": "1.11.0",
     "mongoose": "4.5.0",
+    "morgan": "1.7.0",
     "nodemon": "1.9.2",
     "socket.io": "1.4.6"
   },
