--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mongoose": "4.5.0",
     "morgan": "1.7.0",
     "nodemon": "1.9.2",
-    "socket.io": "1.4.6"
+    "socket.io": "1.4.6",
+    "ngrok": "2.2.1 "
   },
 
   "scripts": {
