--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "view-todo",
+  "name": "vue-mongo-todo",
   "description": "This is a simple real time todo app built with Node, Vue, and MongoDB.",
   "main": "index.js",
   "private": true,
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jabes/control-demo"
+    "url": "https://github.com/jabes/vue-mongo-todo"
   },
   "dependencies": {
     "body-parser": "1.15.2",
